unpackaged/main/default/objects/Downstream_Event__e/Downstream_Event__e.object-meta.xml
<CustomObject>
    <description>This will be used to handle downstream changes when an object higher in the hierarchy changes.</description>
    <label>Downstream Event</label>
    <pluralLabel>Downstream Events</pluralLabel>
</CustomObject>