unpackaged/main/default/objects/Downstream_Event__e/fields/NewOwner__c.field-meta.xml
<CustomField>
    <fullName>NewOwner__c</fullName>
    <label>New Owner</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>