unpackaged/main/default/objects/Downstream_Event__e/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <description>The object where the event bus started</description>
    <label>Object</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>