unpackaged/main/default/objects/Downstream_Event__e/fields/OldOwner__c.field-meta.xml
<CustomField>
    <fullName>OldOwner__c</fullName>
    <label>Old Owner</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>