unpackaged/main/default/objects/Downstream_Event__e/fields/SourceId__c.field-meta.xml
<CustomField>
    <fullName>SourceId__c</fullName>
    <description>This is the object that had its owner changed.</description>
    <label>Source Id</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>